envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10001
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            # timeout: 15s
                            idle_timeout: 15s
                            cluster: service_google
                            retry_policy:
                              retry_on: connect-failure,gateway-error,reset,unavailable,deadline-exceeded
                              retry_host_predicate:
                                - name: envoy.retry_host_predicates.previous_hosts
                              num_retries: 2
                              per_try_timeout: 1s
                            hedge_policy:
                              hedge_on_per_try_timeout: true
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: service_google
      connect_timeout: 100s
      type: STRICT_DNS
      # Comment out the following line to test on v6 networks
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_google
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: nodeserv
                      port_value: 8081
